RESOLVED FIXED231189
[LFC][IFC] Hyphenation should not be applied with 'word-break: break-all'
https://bugs.webkit.org/show_bug.cgi?id=231189
Summary [LFC][IFC] Hyphenation should not be applied with 'word-break: break-all'
Attachments
Patch (2.69 KB, patch)
2021-10-04 12:31 PDT, alan
no flags
alan
Comment 1 2021-10-04 12:31:39 PDT
EWS
Comment 2 2021-10-04 19:52:58 PDT
Committed r283533 (242498@main): <https://commits.webkit.org/242498@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440088 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-04 19:53:18 PDT
Note You need to log in before you can comment on or make changes to this bug.