[LFC][IFC] Hyphenation should not be applied with 'word-break: break-all' https://bugs.webkit.org/show_bug.cgi?id=231189

Reviewed by Antti Koivisto.

"break-all: Breaking is allowed within “words”: specifically...Hyphenation is not applied."

https://drafts.csswg.org/css-text-3/#word-break-property.

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::wordBreakBehavior const):


Canonical link: https://commits.webkit.org/242498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283533 268f45cc-cd09-0410-ab3c-d52691b4dbfc